Fixing slight misalignment of login/signup buttons

--- a/app/assets/stylesheets/common/base/header.scss
+++ b/app/assets/stylesheets/common/base/header.scss
@@ -56,6 +56,8 @@
   }
 
   .header-buttons {
+    display: flex;
+    align-items: center;
     margin-top: 0.2em;
   }
 
